extended sections of programming languages and IDEs

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -222,26 +222,99 @@
    "source": [
     "### Programming languages\n",
     "\n",
-    "This section was inspired by:\n",
+    "**@TODO:**  \n",
+    "Rework section **Programming languages**!!\n",
     "\n",
-    "- [What Is the Best Language for Machine Learning?](https://www.springboard.com/blog/data-science/best-language-for-machine-learning/)\n",
-    "- [Is Octave Good for Machine Learning?](https://datasciencenerd.com/is-octave-good-for-machine-learning/)\n",
+    "The comparison of **advantages and disadvantages** of the various programming languages suitable for ML was inspired by the following articles, among others:\n",
+    "\n",
+    "- [What Is the Best Language for Machine Learning?](https://www.springboard.com/blog/data-science/best-language-for-machine-learning/) (<cite data-cite=\"ML_bestLanguage_2021\">Gupta, 2021</cite>)\n",
+    "- [Is Octave Good for Machine Learning?](https://datasciencenerd.com/is-octave-good-for-machine-learning/) (<cite data-cite=\"Octave_for_ML_2021\">Adhikari, 2021</cite>)\n",
+    "\n",
+    "There is no best language for machine learning, each is good where it fits best. Yes, there is no single machine learning language as the best language for machine learning. However, there are definitely some programming languages that are more appropriate for machine learning tasks than others (<cite data-cite=\"ML_bestLanguage_2021\">Gupta, 2021</cite>).\n",
+    "\n",
+    "The math behind machine learning is usually complicated and unobvious. Thus, code readability is extremely important to successfully implement complicated machine learning algorithms and versatile workflows (<cite data-cite=\"ML_bestLanguage_2021\">Gupta, 2021</cite>).\n",
+    "\n",
+    "All programming languages presented below are **open source**.\n",
     "\n",
     "Following trend chart shows how the [popularity of selected programming languages](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B) suitable for machine learning has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of programming languages for ML (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_ProgrammingLanguages_wide.png)\n",
+    "![Trend chart shows popularity of programming languages for ML (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_ProgrammingLanguages_wide.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03b6abf-ab54-4518-822f-099a9653a7b0",
+   "metadata": {},
+   "source": [
+    "#### [Python](https://en.wikipedia.org/wiki/Python_(programming_language))\n",
     "\n",
-    "#### Python\n",
+    "It is a high-level, **general-purpose** programming language where its design philosophy emphasizes **code readability**. The **variable types** in Python are **dynamic** and **memory** is **automatically managed** to create and delete data objects (see [garbage collection](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science))).\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- Python offers simple, concise, and **readable code**. Its simplicity allows you to write robust and reliable programs (<cite data-cite=\"Octave_for_ML_2021\">Adhikari, 2021</cite>).\n",
+    "- lets you focus on solving the ML problem instead of getting lost in the language’s technical nuances.\n",
+    "- Python has extensive libraries for ML. It has a library for virtually everything related to ML. Scikit-learn, Pandas, TensorFlow, Keras, etc., have become standard libraries for various ML tasks.\n",
+    "- Python has been around for decades. It has developed a large and helpful community. Extensive documentation is available online.\n",
+    "- Thousands of question-answers and community guides for different functionalities of the language (this is also very good reflected by the trend chart on popularity of programming languages).\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- (unknown drawbacks so far ...)\n",
+    "\n",
+    "#### [R](https://en.wikipedia.org/wiki/R_(programming_language))\n",
+    "\n",
+    "It is a programming language for statistical computing and graphics supported by the R Core Team and the R Foundation for Statistical Computing. Created by statisticians Ross Ihaka and Robert Gentleman, R is used among data miners, bioinformaticians and statisticians for data analysis and developing statistical software.\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- After Python, R is the recommended ML programming language (<cite data-cite=\"Octave_for_ML_2021\">Adhikari, 2021</cite>).\n",
+    "- R is excellent for data visualization and statistics. It is often the preferred language for applications with a lot of statistical data.\n",
+    "- R is a flexible language offering cross-platform compatibility.\n",
+    "- It also has a growing, helpful community to help you if you get stuck.\n",
+    "- R is an incredible programming language for machine learning written by a statistician for statisticians. R is the preferred choice for machine learning applications that use a lot of statistical data.\n",
+    "- R is considered a powerful choice for machine learning because of the breadth of machine learning techniques it provides, e.g. data visualization, data sampling, data analysis, model evaluation and supervised/unsupervised machine learning.\n",
+    "- R is highly flexible and also offers cross-platform compatibility.\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- However, R is often reported to be laggier and slower as compared to Python when dealing with large-scale data products.\n",
+    "- R has a significantly lower community support when answering questions or giving guidance compared to Python (see trend chart on popularity of programming languages).\n",
     "\n",
     "\n",
-    "#### R\n",
+    "#### [Java](https://en.wikipedia.org/wiki/Java_(programming_language))\n",
     "\n",
+    "It is a high-level, **class-based**, **object-oriented** programming language that is designed to have **as few implementation dependencies** as possible. It is a **general-purpose** programming language intended that compiled Java code can run on all platforms that support Java without the need to recompile. \n",
     "\n",
-    "#### Java and JavaScript\n",
+    "Pros:\n",
     "\n",
+    "- Java is quickly gaining popularity among ML enthusiasts who come from a Java background. Using Java for machine learning removes the burden of learning another programming language like Python or R (<cite data-cite=\"Octave_for_ML_2021\">Adhikari, 2021</cite>).\n",
+    "- Like Python and R, Java also has several libraries for machine learning.\n",
+    "- Java has plenty of third party libraries for machine learning. JavaML is an in-built machine learning library that provides a collection of machine learning algorithms implemented in Java (<cite data-cite=\"ML_bestLanguage_2021\">Gupta, 2021</cite>).\n",
+    "- Scalability is an important feature that every machine learning engineer must consider before beginning a project. Java makes application scaling easier for machine learning engineers.\n",
+    "- [Java Virtual Machine (JVM)](https://en.wikipedia.org/wiki/Java_virtual_machine) is one of the best platforms for machine learning as engineers can write the same code on multiple platforms.\n",
+    "- Java works best for speed-critical machine learning projects as it is fast executing.\n",
     "\n",
-    "#### GNU Octave\n",
+    "Cons:\n",
     "\n",
+    "- Java has a much lower community support in answering questions or giving guidance compared to Python - but a better one than R (see trend chart on popularity of programming languages).\n",
+    "\n",
+    "#### [GNU Octave](https://en.wikipedia.org/wiki/GNU_Octave)\n",
+    "\n",
+    "It is a high-level programming language that’s designed for numerical computations (<cite data-cite=\"Octave_for_ML_2021\">Adhikari, 2021</cite>).\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- You can quickly solve linear and non-linear numerical problems and perform other experiments numerically.\n",
+    "- Octave is quite similar and mostly compatible with MATLAB. If a code runs on MATLAB without using any functions that Octave doesn’t have, it will also run on Octave. It even has several language features and syntax variety that MATLAB lacks.\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- However, Octave is not a good programming language for machine learning in a production environment.\n",
+    "- It doesn’t have the same functionality as other languages used for ML\n",
+    "- It doesn’t have libraries and frameworks to speed up ML tasks.\n",
+    "- It’s not as flexible, simple, and feature-rich as other programming languages.\n",
+    "- Compared to Python, R and Java, Octave has almost no community support when it comes to answering questions or providing guidance (compare trend chart on popularity of programming languages).\n",
     "\n"
    ]
   },
@@ -252,26 +325,65 @@
    "source": [
     "### Programming IDEs\n",
     "\n",
-    "**[Integrated development environments (IDE)](https://en.wikipedia.org/wiki/Integrated_development_environment)** are software applications that provide comprehensive features to computer programmers for **software development**. An IDE typically consists of a **source code editor**, automated **build tools** for compiling or an **interpreter** for scripting languages, a front end to the **version control system** like e.g. [Git](https://en.wikipedia.org/wiki/Git) and a **debugger**.\n",
+    "**[Integrated development environments (IDE)](https://en.wikipedia.org/wiki/Integrated_development_environment)** are software applications that provide comprehensive features to computer programmers for **software development**. An IDE typically consists of a **source code editor**, automated **build tools** for compiling or an **interpreter** for scripting languages, a front end to the **version control system** like e.g. [Git](https://en.wikipedia.org/wiki/Git) and a **debugger** (<cite data-cite=\"Wiki_IDE\">Wikipedia: IDE</cite>).\n",
     "\n",
     "Following trend chart shows how the [popularity of selected IDEs](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code) suitable for ML programming languages has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs_wide.png)\n",
+    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs_wide.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5281a06d-7e00-4b22-a778-cfd80dd7ae07",
+   "metadata": {},
+   "source": [
+    "#### [Visual Studio Code (VSC)](https://en.wikipedia.org/wiki/Visual_Studio_Code)\n",
     "\n",
-    "#### Visual Studio Code\n",
+    "It is an IDE made by **Microsoft** for **Windows**, **Linux** and **macOS**. Features include support for **debugging**, **syntax highlighting** for many different programming languages, intelligent **code completion** and embedded **version control system** Git. Users can change the theme, keyboard shortcuts, preferences, and install **extensions** from a huge repository that add additional functionality. Despite of its platform independence, VSC is **not open source** - in fact it is released under a traditional [Microsoft product license](https://code.visualstudio.com/License/).\n",
     "\n",
-    "![Screenshot of IDE *Visual Studio Code* (source: Kasper, license: CC BY-SA)](images/Screenshot_VSC.png)\n",
+    "![Screenshot of IDE *Visual Studio Code* (source: Kasper, license: CC BY-SA)](images/Screenshot_VSC.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeef738b-2c88-4f7f-b19e-90c44b8d48d7",
+   "metadata": {},
+   "source": [
+    "#### [JupyterLab](https://en.wikipedia.org/wiki/Project_Jupyter#Jupyter_Notebook)\n",
     "\n",
-    "#### JupyterLab\n",
+    "It is the successor product for the web-based interactive environment **Jupyter Notebook**. Within this IDE, Jupyter Notebook documents can be created, edited, and executed interactively. The notebooks consist of **input and output cells**, each of which can contain program code, formatted text in **Markdown** format, and live plots generated from the code.\n",
     "\n",
-    "![Screenshot of IDE *JupyterLab* (source: Kasper, license: CC BY-SA)](images/Screenshot_JupyterLab.png)\n",
+    "Jupyter is a new **open-source** alternative to the proprietary numerical software [Mathematica](https://en.wikipedia.org/wiki/Wolfram_Mathematica) from **Wolfram Research** that is well on the way to becoming a **standard for exchanging research results** (<cite data-cite=\"Scientific_Paper_obsolete_2018\">Somers, 2018</cite>; <cite data-cite=\"Future_of_Research_Paper_2018\">Romer, 2018</cite>).\n",
     "\n",
-    "#### RStudio\n",
+    "Originally Jupyter was intended as an IDE for the programming languages **Julia** and **Python**. Besides that it is also possible to install other interpreter kernels, such as the **[IRkernel](https://irkernel.github.io/installation/)** for R. This can be interesting if the IDE **RStudio Desktop** is not available on the target platform used. For example, it is very difficult to install RStudio on the ARM-based embedded computer **Raspberry Pi** due to many technical dependencies. In contrast, using the R kernel in JupyterLab on the Raspberry Pi works very well and performant.\n",
     "\n",
-    "![Screenshot of IDE *RStudio* (source: Kasper, license: CC BY-SA)](images/Screenshot_RStudio.png)\n",
+    "![Screenshot of IDE *JupyterLab* (source: Kasper, license: CC BY-SA)](images/Screenshot_JupyterLab.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bccc0eab-c1c3-48a1-90b1-18da419e4c02",
+   "metadata": {},
+   "source": [
+    "#### [RStudio](https://en.wikipedia.org/wiki/RStudio)\n",
     "\n",
+    "It is an IDE and graphical user interface for the statistical programming language **R** offered by **RStudio, Inc.** and is made available in two formats. **RStudio Desktop** is a regular desktop application while **RStudio Server** runs on a remote server and allows accessing RStudio using a web browser. Both software products are available in **open source** and **commercial** versions, each with different functionalities.\n",
     "\n",
-    "#### GNU Octave (GUI)\n",
+    "The program editor in RStudio allows **autocompletion**, **automatic indentation**, **syntax highlighting**, **code folding** as well as **integrated help** and information about functions and objects in the working environment. There is the ability to view and edit the contents of variables and datasets. To facilitate collaboration, scripts, data and other files can be combined into projects (.Rproj) and versioned with **Git**.\n",
+    "\n",
+    "![Screenshot of IDE *RStudio* (source: Kasper, license: CC BY-SA)](images/Screenshot_RStudio.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce9e71e-3481-4c7a-8034-8291f72a2c81",
+   "metadata": {},
+   "source": [
+    "#### [GNU Octave (GUI)](https://en.wikipedia.org/wiki/GNU_Octave#User_interfaces)\n",
+    "\n",
+    "It is the official graphical user interface for the **GNU Octave** programming language and is available for Windows, macOS, Linux and BSD under **Open Source** licensing.\n",
+    "\n",
+    "If the command line interpreter (CLI) starts instead of the graphical user interface (GUI) when `octave` is called, this can be forced via the `octave --gui` option.\n",
     "\n",
     "![Screenshot of IDE *GNU Octave* (source: Kasper, license: CC BY-SA)](images/Screenshot_GNU_Octave.png)\n",
     "\n"
@@ -332,7 +444,7 @@
     "- **Openness**: availability of very good interface documentation and ideally open source software\n",
     "- **Self-administration**: user has full installation and configuration rights\n",
     "- **Communication capability**: unfiltered and bidirectional communication in the local network as well as to the Internet on all necessary protocols possible\n",
-    "- extensibility**:\n",
+    "- **Extensibility**:\n",
     "    - automated software installation and update management via central package management systems such as `apt`, `pip` or `conda`\n",
     "    - possible integration of additional software libraries or external sensor hardware\n",
     "\n",
@@ -6759,7 +6871,7 @@
     "\n",
     "> Support Vector Classifiers (SVC) try to **find the best hyperplane to separate** the different classes by maximizing the distance between sample points and the hyperplane (source: [In Depth: Parameter tuning for SVC](https://medium.com/all-things-ai/in-depth-parameter-tuning-for-svc-758215394769)).\n",
     "\n",
-    "The figure \\ref{fig:Svm_separating_hyperplanes} shows the operating principal of the SVC algorithm: the hyperplanes *H1* till *H4* (left graphic) do separate the classes. A good separation is achieved by the hyperplane that has the largest distance to the nearest training-data point of any class (so-called functional margin), since in general the larger the margin, the lower the generalization error of the classifier (source: [Support-vector machine](https://en.wikipedia.org/wiki/Support-vector_machine)).\n",
+    "The following figure shows the operating principal of the SVC algorithm: the hyperplanes *H1* till *H4* (left graphic) do separate the classes. A good separation is achieved by the hyperplane that has the largest distance to the nearest training-data point of any class (so-called functional margin), since in general the larger the margin, the lower the generalization error of the classifier (source: [Support-vector machine](https://en.wikipedia.org/wiki/Support-vector_machine)).\n",
     "\n",
     "The right graphic shows the optimal hyperplane characterized by maximizing the margin between the classes. The perpendicular distance of the closest data points to the hyperplane determines their position and orientation. These perpendicular distances are the **support vectors** of the hyperplane - this is how the algorithm got its name."
    ]
@@ -8996,7 +9108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
