--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -16,25 +16,6 @@
   owner        = {bk},
 }
 
-@Book{Geron_2018,
-  author       = {Géron, Aurélien},
-  date         = {2018},
-  title        = {Praxiseinstieg Machine Learning mit Scikit-Learn und TensorFlow},
-  edition      = {1. Auflage},
-  isbn         = {978-3-96010-114-7},
-  language     = {German},
-  location     = {Heidelberg},
-  origlanguage = {English},
-  pages        = {552},
-  publisher    = {O`Reilly},
-  subtitle     = {Konzepte, Tools und Techniken für intelligente Systeme},
-  translator   = {Rother, Kristian},
-  url          = {https://katalog.ub.uni-heidelberg.de/cgi-bin/titel.cgi?katkey=68275614},
-  urldate      = {2022-08-30},
-  keywords     = {book},
-  owner        = {bk},
-}
-
 @Online{NVIDIA_CUDA_CAP_2022,
   author   = {NVIDIA{.}Developer},
   date     = {2022-07-20},
@@ -79,15 +60,15 @@
   keywords = {URL},
 }
 
-@Online{Wiki_VM,
-  author   = {Wikipedia{: }VM},
-  date     = {2022-08-17},
+@Online{Wiki_IDE,
+  author   = {Wikipedia{: }IDE},
+  date     = {2022-09-01},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
-  keywords = {URL},
+  title    = {Integrated development environment},
+  url      = {https://en.wikipedia.org/w/index.php?title=Integrated_development_environment&oldid=1107871547},
   language = {English},
-  title    = {Virtual machine},
-  url      = {https://en.wikipedia.org/w/index.php?title=Virtual_machine&oldid=1104946655},
-  urldate  = {2022-08-31},
+  urldate  = {2022-09-08},
+  keywords = {URL},
 }
 
 @Online{Wiki_OpenCL,
@@ -435,6 +416,81 @@ Im Rahmen des Projekts wurden verschiedene Vorschläge zur Weiterentwicklung des
 
 Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbegleitungskonzept" erarbeitet. Den Hersteller sollten nach diesem Ansatz Pflichten zur Gewährleistung der Sicherheit über den gesamten bestimmungsgemäßen Produktlebenszyklus treffen. Das Produktbegleitungskonzept umfasst sowohl das Sammeln von Informationen im Betrieb des Produkts und deren Auswertung als auch das Ergreifen von Maßnahmen. Es geht hier also um Beobachtung und Reaktion - in Abgrenzung zur herkömmlichen Produktbeobachtung.},
   keywords    = {book},
+}
+
+@Book{Geron_2018,
+  author       = {Géron, Aurélien},
+  date         = {2018},
+  title        = {Praxiseinstieg Machine Learning mit Scikit-Learn und TensorFlow},
+  edition      = {1. Auflage},
+  isbn         = {978-3-96010-114-7},
+  language     = {German},
+  location     = {Heidelberg},
+  origlanguage = {English},
+  pages        = {552},
+  publisher    = {O`Reilly},
+  subtitle     = {Konzepte, Tools und Techniken für intelligente Systeme},
+  translator   = {Rother, Kristian},
+  url          = {https://katalog.ub.uni-heidelberg.de/cgi-bin/titel.cgi?katkey=68275614},
+  urldate      = {2022-08-30},
+  keywords     = {book},
+  owner        = {bk},
+}
+
+@Online{Octave_for_ML_2021,
+  author       = {Daisy Adhikari},
+  date         = {2021-03-01},
+  title        = {Is Octave Good for Machine Learning?},
+  url          = {https://datasciencenerd.com/is-octave-good-for-machine-learning/},
+  language     = {English},
+  organization = {Data Science Nerd},
+  urldate      = {2022-09-08},
+  abstract     = {If you’ve taken Andrew Ng’s course on machine learning, you learned it using Octave/MATLAB. However, when you do a Google search, almost nobody seems to be talking about Octave as a programming language for machine learning. As a beginner, it’s natural to wonder why Octave has little support online even after being taught in the go-to introductory course for machine learning and is it even good?},
+  keywords     = {URL},
+}
+
+@Online{ML_bestLanguage_2021,
+  abstract     = {If you’re new to the field of machine learning, the toughest part of learning machine learning is deciding where to begin. Whether you are trying to refresh your machine learning skills or making a career transition into machine learning entirely, it is natural to wonder which is the best language for machine learning. With over 700 different programming languages in widespread use, and each having its pros and cons, discovering which is the best language for machine learning is definitely a tough task. The good news, however, is that as you begin your journey as a machine learning engineer, you’ll start to discover which programming language will be most suitable for a business problem you are trying to solve.},
+  author       = {Sakshi Gupta},
+  date         = {2021-10-06},
+  keywords     = {URL},
+  language     = {English},
+  organization = {Springboard},
+  title        = {What is the best language for machine learning?},
+  url          = {https://www.springboard.com/blog/data-science/best-language-for-machine-learning/},
+  urldate      = {2022-09-08},
+}
+
+@Online{Wiki_VM,
+  author   = {Wikipedia{: }VM},
+  date     = {2022-08-17},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Virtual machine},
+  url      = {https://en.wikipedia.org/w/index.php?title=Virtual_machine&oldid=1104946655},
+  urldate  = {2022-08-31},
+}
+
+@Online{Scientific_Paper_obsolete_2018,
+  author       = {James Somers},
+  date         = {2018-04-05},
+  title        = {The Scientific Paper Is Obsolete},
+  url          = {https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/},
+  language     = {English},
+  organization = {The Atlantic},
+  urldate      = {2022-09-08},
+  keywords     = {URL},
+}
+
+@Online{Future_of_Research_Paper_2018,
+  author   = {Paul Romer},
+  date     = {2018-04-13},
+  title    = {Jupyter, Mathematica, and the Future of the Research Paper},
+  url      = {https://paulromer.net/jupyter-mathematica-and-the-future-of-the-research-paper/},
+  language = {English},
+  urldate  = {2022-09-08},
+  keywords = {URL},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
