--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -493,4 +493,36 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@Article{Hunter_matplotlib_2007,
+  Author    = {Hunter, J. D.},
+  date      = {2007-06-18},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing in Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python for application development, interactive scripting, and publication-quality image generation across user interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  url       = {https://matplotlib.org/stable/users/project/history.html},
+  urldate   = {2022-09-09},
+  keywords  = {book},
+}
+
+@Article{Waskom_seaborn_2021,
+    doi = {10.21105/joss.03021},
+    url = {https://doi.org/10.21105/joss.03021},
+    date = {2021-04-06},
+    publisher = {The Open Journal},
+    volume = {6},
+    number = {60},
+    pages = {3021},
+    author = {Michael L. Waskom},
+    title = {seaborn: statistical data visualization},
+    journal = {Journal of Open Source Software},
+    url       = {https://joss.theoj.org/papers/10.21105/joss.03021},
+    urldate   = {2022-09-09},
+    keywords  = {book},
+ }
+
 @Comment{jabref-meta: databaseType:biblatex;}
