added section about cloud-hosted IDEs

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "id": "ad1c0b91-b676-4313-95d7-1ba21549e22f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
+    "incorrectly_encoded_metadata": "jp-MarkdownHeadingCollapsed=true",
     "tags": []
    },
    "source": [
@@ -374,7 +374,7 @@
     "\n",
     "- [Matplotlib](https://matplotlib.org) is a library for making **2D plots of arrays** in Python. Although it has its origins in **emulating the MATLAB graphics commands**, it is independent of MATLAB, and can be used in a Pythonic, object oriented way. Although Matplotlib is written primarily in pure Python, it makes heavy use of NumPy and other extension code to provide good performance even for large arrays (<cite data-cite=\"Hunter_matplotlib_2007\">Hunter, 2007</cite>).\n",
     "\n",
-    "- [Seaborn](https://seaborn.pydata.org/) is a library for making **statistical graphics** in Python. It builds **on top of matplotlib** and integrates closely with **pandas data structures**. Seaborn helps to explore and understand the data. Its plotting functions operate on **dataframes** and **arrays** containing whole datasets and internally perform the necessary semantic mapping and statistical aggregation to produce informative plots  (<cite data-cite=\"Waskom_seaborn_2021\">Wascom, 2021</cite>)."
+    "- [Seaborn](https://seaborn.pydata.org/) is a library for making **statistical graphics** in Python. It builds **on top of matplotlib** and integrates closely with **pandas data structures**. Seaborn helps to explore and understand the data. Its plotting functions operate on **dataframes** and **arrays** containing whole datasets and internally perform the necessary semantic mapping and statistical aggregation to produce informative plots (<cite data-cite=\"Waskom_seaborn_2021\">Wascom, 2021</cite>)."
    ]
   },
   {
@@ -460,6 +460,66 @@
     "\n",
     "![Screenshot of IDE *GNU Octave* (source: Kasper, license: CC BY-SA)](images/Screenshot_GNU_Octave.png)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "823545de-8f5e-4d28-87ca-d5847a5d59a0",
+   "metadata": {},
+   "source": [
+    "### Cloud-hosted IDEs\n",
+    "\n",
+    "A very interesting alternative to own, local and for the ML application adequately powerful and thus price-intensive hardware resources can be **cloud-hosted Jupyter environments**. These offer features such as cloud storage, model training and deployment capabilities, version control, and much more.\n",
+    "\n",
+    "Since the entire hardware and backend configurations are hosted in the cloud by the various providers, the user can concentrate on creating his ML application. The cloud provider takes care of purchasing the hardware and the sometimes time-consuming installation and configuration of the programming environment (<cite data-cite=\"Colab_Alternatives_2021\">Rapp, 2021</cite>).\n",
+    "\n",
+    "The cloud environments briefly presented here can be used freely after registration - on condition that own projects remain accessible to other researchers. Even in the free variant, GPUs and [Tensor Processing Units (TPUs)](https://en.wikipedia.org/wiki/Tensor_Processing_Unit) can be selected in the project for hardware acceleration. This is particularly interesting for training deep neural networks.\n",
+    "\n",
+    "In the premium versions, for example, more powerful GPUs and TPUs as well as more memory can be accessed. Additionally, there is the option to keep the projects private and thus prevent accessibility for other researchers.\n",
+    "\n",
+    "However, with all the advantages, **data protection aspects** should definitely be considered. Before using a cloud environment, it should be clarified whether and to what extent, for example, **own datasets with personal data** may be uploaded to the cloud projects. If there are uncertainties here, local and self-hosted ML resources should be used in any case!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b698f890-8319-4d1a-81a2-6fca5690dd56",
+   "metadata": {},
+   "source": [
+    "#### [Google Colaboratory](https://colab.research.google.com/)\n",
+    "\n",
+    "In recent years, **Google Colaboratory** (**Colab** for short) has become a popular choice for cloud-based Jupyter notebooks. Thanks to its free-to-use GPUs and cloud storage linked to Google Drive, it is used by many users in the ML and data science community (<cite data-cite=\"Colab_Alternatives_2021\">Rapp, 2021</cite>).\n",
+    "\n",
+    "Due to the similarity of the web interface to Jupyter, Python developers can write and run arbitrary Python program codes. Colab is a cloud-hosted version of Jupyter Notebook that provides free access to compute infrastructure such as memory, storage, processing capacity, GPUs and TPUs (<cite data-cite=\"Colab_about_2022\">Das, 2022</cite>).\n",
+    "\n",
+    "Furthermore, commonly used libraries such as **PyTorch**, **TensorFlow** and **Keras** can be used to develop deep learning applications (<cite data-cite=\"Colab_5_Alternatives_2021\">Misal, 2021</cite>).\n",
+    "\n",
+    "![Screenshot of IDE *Google Colaboratory* (source: Kasper, license: CC BY-SA)](images/Screenshot_google_Colab.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "703ec890-0379-42a2-b6d3-7cf736308f75",
+   "metadata": {},
+   "source": [
+    "#### [Google Kaggle](https://www.kaggle.com)\n",
+    "\n",
+    "This is another Google product with similar functionality to Colab. Like Colab, **Kaggle** also offers free browser-based Jupyter notebooks and the use of GPUs. Kaggle also has many **Python packages pre-installed**, which lowers the barrier to entry for many users (<cite data-cite=\"Colab_Alternatives_2021\">Rapp, 2021</cite>).\n",
+    "\n",
+    "Kaggle and Colab have a number of similarities - among other things, most of the keyboard shortcuts are the same as in Jupyter notebooks. Furthermore, many datasets can be imported. Kaggle has a large user community to learn and improve Data Science skills (<cite data-cite=\"Colab_5_Alternatives_2021\">Misal, 2021</cite>).\n",
+    "\n",
+    "![Screenshot of IDE *Google Kaggle* (source: Kasper, license: CC BY-SA)](images/Screenshot_google_Kaggle.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db9dc8f8-b5ae-4a0f-b35c-60fee400ee0b",
+   "metadata": {},
+   "source": [
+    "#### [Paperspace Gradient](https://www.paperspace.com/gradient/notebooks)\n",
+    "\n",
+    "Unlike Colab, **Paperspace Gradient** can implement entire **ML workflows** from data pre-processing to training models to deploying the trained models. Furthermore, Gradient has features like a CLI tool, more control over the GPU, and simpler data management services. Due to the variety of functions, one must first become familiar with the operation of the significantly more complex user interface (<cite data-cite=\"Free_GPUs_for_ML_2020\">Siow, 2020</cite>).\n",
+    "\n",
+    "![Screenshot of IDE *Paperspace Gradient* (source: Kasper, license: CC BY-SA)](images/Screenshot_Paperspace_Gradient.png)"
    ]
   },
   {
@@ -551,16 +611,7 @@
    "execution_count": 2,
    "id": "3d024e5f-d32f-4737-b2c1-dd6a038b027b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bk/anaconda3/envs/PyLab/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -1129,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "f3ff481e-9e61-4e02-ad6e-a5d872a065e2",
    "metadata": {
     "scrolled": true,
@@ -2523,7 +2574,7 @@
        "149           5.9          3.0           5.1          1.8   Iris-virginica"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2543,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "4aa0ddf2-987f-4c25-8f18-a3dd8a91ac33",
    "metadata": {
     "tags": []
@@ -2564,7 +2615,7 @@
       " 3   petal_width   150 non-null    float64\n",
       " 4   species       150 non-null    object \n",
       "dtypes: float64(4), object(1)\n",
-      "memory usage: 6.0+ KB\n"
+      "memory usage: 5.3+ KB\n"
      ]
     }
    ],
@@ -2574,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "d7ddea8c-628e-40a6-986d-10c9b50610e9",
    "metadata": {},
    "outputs": [
@@ -2678,7 +2729,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9152,7 +9203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
