--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -525,4 +525,44 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
     keywords  = {book},
  }
 
+@Online{Colab_Alternatives_2021,
+  author   = {Rachel Rapp},
+  date     = {2021-03-18},
+  title    = {Best Google Colab Alternatives in 2021},
+  url      = {https://blog.paperspace.com/best-google-colab-alternatives/},
+  language = {English},
+  urldate  = {2022-09-14},
+  keywords = {URL},
+}
+
+@Online{Colab_about_2022,
+  author   = {Tamal Das},
+  date     = {2022-08-16},
+  title    = {Google Colab: Everything you Need to Know},
+  url      = {https://geekflare.com/google-colab/},
+  language = {English},
+  urldate  = {2022-09-14},
+  keywords = {URL},
+}
+
+@Online{Colab_5_Alternatives_2021,
+  author   = {Disha Misal},
+  date     = {2021-07-30},
+  title    = {5 Alternatives To Google Colab For Data Scientists},
+  url      = {https://analyticsindiamag.com/5-alternatives-to-google-colab-for-data-scientists/},
+  language = {English},
+  urldate  = {2022-09-14},
+  keywords = {URL},
+}
+
+@Online{Free_GPUs_for_ML_2020,
+  author   = {Eugene Siow},
+  date     = {2020-12-17},
+  title    = {Free GPUs for Machine Learning: Google Colab vs Paperspace Gradient},
+  url      = {https://news.machinelearning.sg/posts/google_colab_vs_paperspace_gradient/},
+  language = {English},
+  urldate  = {2022-09-14},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
