removed TODO from Software section

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -207,9 +207,7 @@
    "cell_type": "markdown",
    "id": "e425e5df-5a76-4799-aaa1-cd8bb5b82333",
    "metadata": {
-    "tags": [
-     "TODO_Step_0"
-    ]
+    "tags": []
    },
    "source": [
     "## Software\n"
@@ -9216,7 +9214,7 @@
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": false
+  "toc-showtags": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
